k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warden
  namespace: warden
  labels:
    app: warden
spec:
  selector:
    app: warden
  ports:
    - name: frontend
      port: 80
      targetPort: 80
    - name: backend
      port: 8000
      targetPort: 8000
